feat: add logging support with SLF4J and configure logging levels

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.security=DEBUG
 
 management.endpoints.web.exposure.include=health,info,metrics
+
+# Reduce unnecessary logs from Spring Boot
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.com.springboot=DEBUG
