--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=springboot-blog-rest-api
 # uncomment me when you finish `mvn clean package` so the image runs correctly
-spring.datasource.url=jdbc:mysql://mysql-db:3306/blogdb
+# spring.datasource.url=jdbc:mysql://mysql-db:3306/blogdb
 # `mvn clean package` will function with this data string
-# spring.datasource.url=jdbc:mysql://localhost:3306/blogdb?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/blogdb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 
